@@ -21,6 +21,7 @@
    * Fixed issue on some systems with indexed images
    * Fixed pirates and pilots that don't care being able to disable the fake transponder
    * Can now see and target allies that are stealthed
+   * Pheromone emitter won't do anything in exclusively claimed systems
    * `zalek/blackhole/zbh09`: don't error out when a bioship ceases to exist
    * `kidnapped/traffic_00`: fixed formatting string telling the player what system to go to
    * `kidnapped/traffic_01`: ship should spawn if taking off in the same system, not just jumping in
